Doe wat er van je verwacht wordt, ipv wat Eelco wil dat je doet...
svn path=/onderwijs/intern/openedge/openedge-baritus/trunk/; revision=145343